Se implemento la funcionalidad de encriptar los textos

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <label for="texto_encriptar">Ingrese el texto</label>
                     <textarea name="texto_encriptar" id="texto_encriptar" cols="50" rows="5"></textarea>
                     <div class="botones">
-                        <button class="btn negro">Encriptar</button>
-                        <button class="btn gris">Desencriptar</button>
-                        <button class="btn rojo">Limpiar</button>
+                        <button class="btn negro" id="encriptar">Encriptar</button>
+                        <button class="btn gris" id="desencriptar">Desencriptar</button>
+                        <button class="btn rojo" id="limpiar">Limpiar</button>
                     </div>
                 </form>
             </div>
@@ -47,5 +47,8 @@
         <p class="footer-ciudad">Bgootá</p>
         <p class="footer-derechos">&copy; Copyright</p>
     </footer>
+    <script src="./js/clean.js"></script>
+    <script src="./js/encriptar.js"></script>
+    <script src="./js/desencriptar.js"></script>
 </body>
 </html>
