--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <label for="texto_cifrado">Texto cifrado</label>
                     <textarea name="texto_cifrado" id="texto_cifrado" cols="50" rows="5"></textarea>
                     <div class="botones">
-                        <button class="btn negro">Copiar</button>
+                        <button class="btn negro" id="copiar">Copiar</button>
                     </div>
                 </form>
             </div>
@@ -50,5 +50,6 @@
     <script src="./js/clean.js"></script>
     <script src="./js/encriptar.js"></script>
     <script src="./js/desencriptar.js"></script>
+    <script src="./js/copiar.js"></script>
 </body>
 </html>
